manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: node-red
  labels:
    app: node-red
spec:
  type: ClusterIP
  selector:
    app: node-red
  ports:
    - port: 1880
      targetPort: 1880
      protocol: TCP
